Bug 394485 - [bundle] double-click on *.bundle in filemanager open Krita, but fails to auto-install
Summary: [bundle] double-click on *.bundle in filemanager open Krita, but fails to aut...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resource Management (other bugs)
Version First Reported In: 4.0.1
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-05-20 16:45 UTC by David REVOY
Modified: 2018-06-05 12:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
[^ screenshot of the bug] (198.40 KB, image/jpeg)
2018-05-20 16:45 UTC, David REVOY
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2018-05-20 16:45:21 UTC
Created attachment 112774 [details]
[^ screenshot of the bug]

Hi, this is a bug seen on Krita Sprint 2018 (sunday afternoon): when double-click on a *.bundle file in filemanager open Krita, but fails to auto-install.

To reproduce:
=============
1. Download a bundle on your disk (eg. from https://www.peppercarrot.com/extras/resources/ )
2. In the filemanager, open the bundle

Result:
=======
Krita is loading (the file association is done by the system/distro?) then a message displays warning: "Could not open this format, Reason Krita doesn't support this format." (it can be hidden behind the splash screen)

Expected:
=========
Having Krita loading is fine, but it would be better if the *.bundle could be installed that way too. (eg. Showing the resources manager containing the bundle with a green information message: "bundlename.bundle installed and activated"
Comment 1 Halla Rempt 2018-05-21 13:18:20 UTC
Notes from the meeting:

    * Krita attempts to open a resource bundle because the resource bundle is associated with Krita somehow. NEEDS BUGREPORT!
        * Can we get the resource manager to pop-up?
Comment 2 Halla Rempt 2018-06-05 12:20:59 UTC
Git commit 8fff40a222b006f211e907800b15fe035005a8f6 by Boudewijn Rempt.
Committed on 05/06/2018 at 12:19.
Pushed by rempt into branch 'krita/4.0'.

Copy bundles to the local bundle folder from args

If Krita is started with a bundle file as an argument, do not open
it, but copy it to the bundle folder. You can also drop a bundle
on the mainwindow but it won't be loaded in that case.

M  +18   -18   libs/ui/KisApplication.cpp
M  +19   -2    libs/ui/KisMainWindow.cpp
M  +3    -0    libs/ui/KisMainWindow.h

https://commits.kde.org/krita/8fff40a222b006f211e907800b15fe035005a8f6
Comment 3 Halla Rempt 2018-06-05 12:32:04 UTC
Git commit f71e7498a91f71f0e5c59ba41edd64a201318ac5 by Boudewijn Rempt.
Committed on 05/06/2018 at 12:31.
Pushed by rempt into branch 'master'.

Copy bundles to the local bundle folder from args

If Krita is started with a bundle file as an argument, do not open
it, but copy it to the bundle folder. You can also drop a bundle
on the mainwindow but it won't be loaded in that case.
(cherry picked from commit 8fff40a222b006f211e907800b15fe035005a8f6)

M  +19   -16   libs/ui/KisApplication.cpp
M  +18   -1    libs/ui/KisMainWindow.cpp
M  +3    -0    libs/ui/KisMainWindow.h

https://commits.kde.org/krita/f71e7498a91f71f0e5c59ba41edd64a201318ac5